[project]
name = "bio-ops-shift-copilot"
version = "0.1.0"
description = "A shift-level wastewater operations copilot that turns synthetic microscopy/process logs into explainable biological state, confidence bands"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Tarun Aditya Kusupati" }
]
dependencies = []

[project.scripts]
bio-ops-shift-copilot = "bio_ops_shift_copilot.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
